# fswatch-sys

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: ffi.rs  lib.rs  test.rs
