[package]
name = "fswatch-sys"
version = "0.1.6"
description = "FFI bindings and a Rust wrapper for libfswatch"
authors = ["Kyle Clemens <me@kyleclemens.com>"]
repository = "https://github.com/jkcclemens/fswatch-sys"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
libc = "0.2"
time = {version = "0.1", optional = true}

[features]
default = []
use_time = ["time"]
