[package]
name = "fswatch-sys"
version = "0.1.9"
description = "FFI bindings and a Rust wrapper for libfswatch"
authors = ["Kyle Clemens <me@kyleclemens.com>"]
repository = "https://github.com/jkcclemens/fswatch-sys"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
bitflags = "2.2.1"
libc = "0.2"
